# claudememory

./: .claude.json  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.sh  test_lokumcu.py  test_mcp_tools.py
.claude-plugin/: plugin.json
ai/: chroma_commit_index.py  claude_memory_mcp_server.py  git_memory_mcp_server.py
claude_memory/: __init__.py  chroma_index.py  cli.py  filters.py  indexer.py  mcp_server.py  store.py
claude_memory/skills/claude-memory-debug/: SKILL.md
claude_memory/skills/claude-memory-index/: SKILL.md
claude_memory/skills/claude-memory-search/: SKILL.md
claudememory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
config/: mcp_config_example.json
git_memory/: __init__.py  chroma_index.py  cli.py  indexer.py
git_memory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: claude_memory_indexer.py  git_memory_indexer.py  store_commit_memory.py
skills/claude-memory-status/: SKILL.md
skills/git-memory-debug/: SKILL.md
skills/git-memory-index/: SKILL.md
skills/git-memory-search/: SKILL.md
skills/git-memory-status/: SKILL.md
