[build-system]
requires      = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "claudememory"
version     = "0.1.8"
description = "Dual-layer ChromaDB + Mem0 Git commit index for Claude Code"
readme      = "README.md"
license     = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.10"

keywords = ["claude-code", "mcp", "git", "memory", "chromadb", "mem0", "ai", "claudememory"]

dependencies = [
    "gitpython>=3.1.40",
    "mem0ai>=0.1.0",
    "fastmcp>=0.4.0",
    "chromadb>=1.0.0",
    "ollama>=0.3.0",
]

[project.optional-dependencies]
openai               = ["openai>=1.0.0"]
sentence-transformers = ["sentence-transformers>=2.2.0"]
dev                  = ["pytest", "ruff", "mypy"]

[project.scripts]
claude-memory       = "claude_memory.cli:main"
claude-memory-index = "claude_memory.cli:index_cmd"
claude-memory-serve = "claude_memory.cli:serve_cmd"
claude-memory-store = "claude_memory.cli:store_cmd"

[tool.setuptools.packages.find]
include = ["claude_memory*"]

[tool.setuptools.package-data]
"claude_memory" = ["py.typed", "skills/*/SKILL.md"]

# Ship skills, config, and hook via data_files so they land outside the package
[tool.setuptools]
include-package-data = true

[tool.setuptools.data-files]
"share/claude-memory/skills/claude-memory-search" = ["skills/claude-memory-search/SKILL.md"]
"share/claude-memory/skills/claude-memory-index"  = ["skills/claude-memory-index/SKILL.md"]
"share/claude-memory/skills/claude-memory-status" = ["skills/claude-memory-status/SKILL.md"]
"share/claude-memory/skills/claude-memory-debug"  = ["skills/claude-memory-debug/SKILL.md"]
"share/claude-memory/config"                      = ["config/mcp_config_example.json"]

[tool.ruff]
line-length = 100
target-version = "py310"
